--- a/remoting/webapp/menu_button.css
+++ b/remoting/webapp/menu_button.css
@@ -41,6 +41,7 @@
   outline: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 6px;
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .menu-button li {
